--- a/package.json
+++ b/package.json
@@ -2,5 +2,8 @@
   "devDependencies": {
     "cors": "^2.8.5",
     "express": "^4.18.2"
+  },
+  "dependencies": {
+    "body-parser": "^1.20.1"
   }
 }
